--- a/phase-2.ipynb
+++ b/phase-2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cd3133c2",
    "metadata": {},
    "outputs": [],
@@ -20,10 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cbbc6f3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basic Slicing:  [3 4 5 6 7 8 9]\n",
+      "Step :  [2 4 6 8]\n",
+      "Negative Indexing :  8\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1,2,3,4,5,6,7,8,9,10])\n",
     "print(\"Basic Slicing: \",arr[2:9])\n",
@@ -33,10 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f9854b45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Specific Element:  6\n",
+      "Entire Row [1 2 3]\n",
+      "Entire Column :  [3 6 9]\n"
+     ]
+    }
+   ],
    "source": [
     "array_2D = np.array([[1,2,3],\n",
     "                    [4,5,6],\n",
@@ -57,10 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "74f90083",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shorted arry:  [ 1  1  1  2  3  3  4  4  5  8  9 10]\n",
+      "2D array Shorting: \n",
+      " [[1 1]\n",
+      " [2 2]\n",
+      " [3 3]]\n",
+      "2D array Shorting: \n",
+      " [[1 3]\n",
+      " [1 2]\n",
+      " [2 3]]\n"
+     ]
+    }
+   ],
    "source": [
     "unsorted_arr = np.array([1,2,3,4,3,1,1,5,8,9,10,4])\n",
     "print(\"Shorted arry: \",np.sort(unsorted_arr))\n",
@@ -82,10 +118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "aab98378",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even Numbers:  [ 2  4  6  8 10]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = np.array([1,2,3,4,5,6,7,8,9,10])\n",
     "even_numbers = numbers[ numbers%2==0 ] #this thing is called masking\n",
@@ -104,10 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4b4f2cb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numbers are N>5:  [ 6  7  8  9 10]\n"
+     ]
+    }
+   ],
    "source": [
     "mask = numbers>5  #we store expression for evolution we only use it with numpy\n",
     "print(\"Numbers are N>5: \",numbers[mask])"
@@ -123,10 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "999825df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5]\n",
+      "(array([5, 6, 7, 8, 9], dtype=int64),)\n",
+      "NP Where:  [ 6  7  8  9 10]\n"
+     ]
+    }
+   ],
    "source": [
     "indecies = [0,2,4]\n",
     "print(numbers[indecies])\n",
@@ -138,10 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "87f0daff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5 12 14 16 18 20]\n"
+     ]
+    }
+   ],
    "source": [
     "condition = np.where(numbers>5 ,numbers*2 ,numbers)\n",
     "print(condition)\n",
@@ -151,10 +221,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4f1c6970",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False False False  True  True  True  True  True]\n"
+     ]
+    }
+   ],
    "source": [
     "#one more example of it:\n",
     "condition = np.where(numbers>5 , True, False)\n",
@@ -171,10 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a50a7f48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "after deletion array:  [1 3 4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "arr1 = np.array([1,2,3])\n",
     "arr2 = np.array([4,5,6])\n",
@@ -196,10 +283,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b30b712d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compatibility Shape a with b:  True\n",
+      "Compatibility Shape b with c:  False\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1,2,3])\n",
     "b = np.array([4,5,6])\n",
@@ -212,10 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2198b73c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "with new row:  [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "With new col:  [[1 2 7]\n",
+      " [3 4 8]]\n"
+     ]
+    }
+   ],
    "source": [
     "#add new row in array -\n",
     "original_arr = np.array([[1,2],[3,4]])\n",
