--- a/phase-1.ipynb
+++ b/phase-1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "16548ef5",
    "metadata": {},
    "outputs": [],
@@ -21,10 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "00df6a09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1D array:  [1 2 3 4 5 6]\n",
+      "2D array: [[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "array_1d = np.array([1,2,3,4,5,6])\n",
     "print(\"1D array: \",array_1d)\n",
@@ -43,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "86037aac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3]\n",
+      "[2 4 6]\n",
+      "time taken by list:  2.1698126792907715\n",
+      "time taken by nparry:  0.05483365058898926\n"
+     ]
+    }
+   ],
    "source": [
     "pylist = [1,2,3]\n",
     "#multiplication of pylist\n",
@@ -77,10 +98,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6a270a4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zero's array:\n",
+      " [[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "1's matrix\n",
+      " [[1. 1.]\n",
+      " [1. 1.]\n",
+      " [1. 1.]\n",
+      " [1. 1.]]\n",
+      "n's matrix\n",
+      " [[5 5]\n",
+      " [5 5]\n",
+      " [5 5]]\n",
+      "[[0.44109417 0.53712747 0.32232974]\n",
+      " [0.59943137 0.75265939 0.10471463]]\n",
+      "[0 6]\n",
+      "sequence array:\n",
+      " [1 3 5 7 9]\n"
+     ]
+    }
+   ],
    "source": [
     "zeros = np.zeros((3,4))\n",
     "# zeros() method return zero's matrix \n",
@@ -118,10 +164,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2912e7fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape (2, 3)\n",
+      "Size 6\n",
+      "Dimension 2\n",
+      "DataType int32\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([[1,2,3],\n",
     "               [4,5,6]])\n",
@@ -143,10 +200,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ee9c3eb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector:  [1 2 3 4 5 6]\n",
+      "Matrix [[1 2 3]\n",
+      " [4 5 6]]\n",
+      "Tensor:  [[[1 2]\n",
+      "  [3 4]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [7 8]]]\n"
+     ]
+    }
+   ],
    "source": [
     "vector = np.array([1,2,3,4,5,6])\n",
     "print('Vector: ',vector)\n",
@@ -175,10 +247,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "45366179",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array:  [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "Reshaped array:  [[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "Raveled array:  [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "Transposed of arr :\n",
+      " [[ 0  4  8]\n",
+      " [ 1  5  9]\n",
+      " [ 2  6 10]\n",
+      " [ 3  7 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "arry = np.arange(12)\n",
     "print('Original Array: ',arry)\n",
